testsuite/tests/linear/should_fail/LinearPatSyn.stderr

LinearPatSyn.hs:14:4: error:
    • Pattern synonyms are only allowed at multiplicity ω
    • In the pattern: P y x
      In an equation for ‘s’: s (P y x) = (y, x)
